--- a/public/fin.css
+++ b/public/fin.css
@@ -1,3 +1,20 @@
 header {
     background-color: #a5a48d;
+	height: 30vh;
+	align-self: center;
+    display: flex;
+    justify-content: space-around;
+}
+
+
+a {
+	color:inherit;
+	text-decoration:none;
+	-webkit-transition:all 0.2s ease-in-out;
+	-moz-transition:all 0.2s ease-in-out;
+	-o-transition:all 0.2s ease-in-out;
+	transition:all 0.2s ease-in-out;
+	justify-content: space-around;
+	margin-left: auto;
+	margin-right: auto;
 }
