--- a/public/fin.css
+++ b/public/fin.css
@@ -18,3 +18,22 @@ a {
 	margin-left: auto;
 	margin-right: auto;
 }
+
+.row {
+	display: flex;
+	flex-wrap: wrap;
+	padding: 0 4px;
+  }
+  
+  /* Create four equal columns that sits next to each other */
+  .column {
+	flex: 50%;
+	padding: 0 4px;
+  }
+  
+  .column img {
+	margin-top: 8px;
+	vertical-align: middle;
+	
+  }
+  
