--- a/views/index.slim
+++ b/views/index.slim
@@ -1,1 +1,5 @@
-h2 HEJHEJJEHJE
+h2 PICNICHE
+
+p Alla älskar picknicks! Via vår service kan du avnjuta en professionellt uppsatt picknick ute i naturen med dina nära och kära, helt coronasäkert! Bygg ditt eget paket för att passa tillfälle och intressen.
+
+img src="/img/picnic.jpg" alt=""/
