--- a/views/layout.slim
+++ b/views/layout.slim
@@ -11,7 +11,7 @@ html lang="en"
 
     nav 
       a href="/galleri" Galleri
-      a href="/order" Börja Planera
+      a href="/handla" Börja Planera
       a href="/kontakt" Kontakt 
       a href="/about" Om företaget
       a href="/login" Logga in
